# fsvlm

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  POSITIONING.md  README.md  SECURITY.md  pyproject.toml
.claude/: README.md  settings.json
.claude/agents/: defect-specialist.md  vlm-researcher.md
.claude/hooks/: block-dangerous.sh
.claude/skills/: autoresearch.md  expert-review.md  improve-skill.md  improve-skills-auto.md  inspect.md  meta-eval.md  plot.md  serve.md  setup.md  sweep.md  tiered-eval.md  train.md  validate.md  verdict.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_result.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
demos/hazelnut/: labels.csv
docker/: .dockerignore  Dockerfile.dev  docker-compose.dev.yml
docs/: audit-trail.md  autoresearch.md  benchmarks.md  research-log.md  skills.md
examples/quickstart/: README.md  check_pipeline.py  make_dataset.py
fsvlm/: __init__.py  cli.py  config.py  events.py  exceptions.py  interfaces.py  registry.py  schemas.py  types.py
fsvlm/agents/: __init__.py  _train_subprocess.py  _validate_subprocess.py  annotation_agent.py  data_agent.py  feedback_agent.py  inspector_agent.py  orchestrator.py  training_agent.py  validation_agent.py
fsvlm/models/: __init__.py  adapter.py  downloader.py  hardware.py  sam.py
fsvlm/prompts/: __init__.py  generic.py  verdict.py
fsvlm/readers/: __init__.py  csv_reader.py  deeppcb_reader.py  folder_reader.py  json_reader.py  visa_reader.py
fsvlm/reports/: __init__.py  html_report.py  json_report.py
fsvlm/server/: __init__.py  api.py
fsvlm/ui/: __init__.py  gradio_app.py
fsvlm/utils/: __init__.py  image.py
research/: README.md  agent_labeler.py  agent_labels.json  dataset_size_results.json  dataset_size_sweep.py  defect_taxonomy.json  icl_baseline.py  pass2b_driver.sh  pass3_resume.sh  phase0_baseline.json  phase0_validation.py  plots.py  queue.json  requirements-phase0.txt  run_sweep.sh  tiered_results.json  tiered_validation.py  verdict.py
research/baselines/: compare_winclip_vs_fsvlm.py  comparison_table.json  corrected_lift_analysis.py  make_paper_figures.py  make_v15_figures.py  n1_ablation_analysis.json  run_winclip.py  saturation_analysis.json  saturation_analysis.py  test_set_hashes.json  test_set_hashes.py  winclip_k2_results.json
research/datasets/: download_deeppcb.sh  download_visa.sh
research/expert_reviews/: training-specialist_2026-04-27T12-06-57Z.json  training-specialist_2026-04-27T23-42-53Z.json  training-specialist_2026-04-28T09-09-59Z.json  training-specialist_2026-04-29T07-04-49Z.json  training-specialist_2026-04-29T13-38-08Z.json  training-specialist_2026-04-29T16-57-07Z.json
research/passes/: pass2_driver.sh  pass3_driver.sh  pass4_driver.sh  pass5b_driver.sh  pass6_driver.sh
scripts/: run_skill_eval.py  validate_skills.py  verify_readme_numbers.py
skills/: README.md  _run.sh  autoresearch.md  debug.md  expert-review.md  improve-skill.md  improve-skills-auto.md  inspect.md  meta-eval.md  plot.md  serve.md  setup.md  sweep.md  tiered-eval.md  train.md  validate.md  verdict.md
skills/evals/: autoresearch.eval.json  debug.eval.json  expert-review.eval.json  improve-skill.eval.json  improve-skills-auto.eval.json  inspect.eval.json  meta-eval.eval.json  plot.eval.json  serve.eval.json  setup.eval.json  sweep.eval.json  tiered-eval.eval.json  train.eval.json  validate.eval.json  verdict.eval.json
tests/: conftest.py
tests/unit/: test_adapter.py  test_annotation_agent.py  test_config.py  test_csv_reader.py  test_data_agent.py  test_deeppcb_reader.py  test_events.py  test_exceptions.py  test_feedback_agent.py  test_folder_reader.py  (+13 more)
(+1 files in other folders)
