[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fsvlm"
version = "0.1.0"
description = "Few-shot fine-tuning benchmarker for vision-language models. Demonstrated on industrial anomaly detection (MVTec AD, VisA, DeepPCB)."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Ahmad Jarjis Hasan" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
keywords = [
    "defect-detection",
    "visual-inspection",
    "vision-language-model",
    "vlm",
    "gemma",
    "lora",
    "qlora",
    "fine-tuning",
    "few-shot-learning",
    "industrial-inspection",
    "anomaly-detection",
    "unsloth",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "Pillow>=10.4.0",
    "loguru>=0.7.0",
    "jinja2>=3.1.0",
    # Required by DataAgent (stratified split) and ValidationAgent (metrics).
    # The data path + the validation report are part of the base surface, not [train]-only.
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "unsloth>=2026.4.2",
    "unsloth_zoo>=2026.4.2",
    "transformers>=4.57.6,<=5.5.0,!=5.0.0,!=5.1.0",
    "trl>=0.23.0,<=0.24.0",
    "peft>=0.18.0",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "triton>=3.3.1",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "datasets>=3.0.0",
]
serve = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.17",
]
watch = [
    "watchdog>=6.0.0",
]
ui = [
    "gradio>=5.0.0",
]
annotate = [
    "gradio>=5.0.0",
    "transformers>=4.57.6",
    "torch>=2.6.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
fsvlm = "fsvlm.cli:app"

[project.urls]
Homepage = "https://github.com/ahmadhasan2k8/fsvlm"
Repository = "https://github.com/ahmadhasan2k8/fsvlm"
Issues = "https://github.com/ahmadhasan2k8/fsvlm/issues"
Changelog = "https://github.com/ahmadhasan2k8/fsvlm/blob/main/CHANGELOG.md"
Positioning = "https://github.com/ahmadhasan2k8/fsvlm/blob/main/POSITIONING.md"

[tool.hatch.build.targets.wheel]
packages = ["fsvlm"]

[tool.ruff]
target-version = "py310"
line-length = 110
extend-exclude = ["research", "scripts/run_skill_eval.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
# Strict mode is too tight for v0.1 — the codebase has dynamic interfaces
# (transformers TrainerCallback, gradio event handlers, typer decorators) that don't
# fit strict typing. We run mypy as a sanity check, not a gate.
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = [
    "misc", "no-untyped-def", "type-arg", "untyped-decorator", "attr-defined",
    "no-redef", "arg-type", "call-overload", "union-attr", "assignment",
    "no-any-return",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
